<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:scaleType="centerInside"
                android:id="@+id/ivProjectOwnerAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@mipmap/ic_java"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/tvProjectOwnerName"/>

        <TextView
                android:id="@+id/tvProjectOwnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Owner1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textSize="25dp"
                app:layout_constraintTop_toBottomOf="@+id/ivProjectOwnerAvatar"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="@+id/ivProjectOwnerAvatar"
                app:layout_constraintEnd_toEndOf="@+id/ivProjectOwnerAvatar"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/guideline"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.33"/>

        <TextView
                android:id="@+id/tvProjectName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Headline"
                tools:text="Project on Github"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/tvProjectLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/rv_item_project_language_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectName"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/tvProjectWatchers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/rv_item_project_watchers_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectLanguage"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/tvProjectIssues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/project_detail_issues_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectWatchers"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/tvProjectCreationDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/project_detail_create_date_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectIssues"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/tvProjectUpdateDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/project_detail_update_date_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectCreationDate"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/tvProjectCloneUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/project_detail_clone_url_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProjectUpdateDate"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>